Fixed blurred background bug with when editing an account

--- a/client/src/SCSS/account/accountDropdown.scss
+++ b/client/src/SCSS/account/accountDropdown.scss
@@ -3,15 +3,13 @@
 .account-dropdown-component {
 	.blurred-background {
 		z-index: 1;
-		position: absolute;
+		position: fixed;
 		left: 0;
 		top: 0;
 		background-color: black;
 		opacity: 0.5;
 		height: 100vh;
 		width: 100vw;
-		// Made visible using JS
-		visibility: hidden;
 	}
 
 	.dropdown-container {
